syntax = "proto3";

package protos.updateonline;

option go_package = "protos";
service UpdateOnline {
    rpc update (UpdateOnlineRequest) returns (UpdateOnlineResponse);
}

message UpdateOnlineRequest {
    string account = 1;
    string userId = 2;
    string sessionId = 3;
    bool   online = 4;
    string device = 5;
}

message UpdateOnlineResponse {
    string message = 1;//状态消息
    int32 code = 2;//状态码
    int32 status = 3;// 请求状态 0失败，1成功
}